Fix navbar dropdown spacing

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -25,3 +25,11 @@ nav.navbar {
     }
   }
 }
+
+@media only screen and (max-width: 991px) {
+  #navbarNav {
+    ul {
+      padding-top: 10px;
+    }
+  }
+}
